# canary-bots-with-cast

./: .gitignore  CMakeLists.txt  DOCKER-HOWTO.md  LICENSE  README.md  THIRD_PARTY_NOTICES.md  config.lua.dist  install-docker.sh  schema.sql
cmake/modules/: CanaryLib.cmake
dadsmmolab/: .env.dist  Dockerfile.server  Dockerfile.web  docker-compose.yml  nginx.conf  server-entrypoint.sh  supervisord.conf  web-entrypoint.sh
data/: global.lua
data-otservbr-global/migrations/: 62.lua
data-otservbr-global/scripts/globalevents/others/: check_mount.lua
data-otservbr-global/scripts/movements/teleport/: shrine_entrance.lua
data-otservbr-global/scripts/quests/soul_war/: eventcallback_on_combat_taint.lua
data/XML/: groups.xml
data/bot_chat/: phrases.json
data/events/scripts/: creature.lua
data/libs/functions/: functions.lua
data/libs/systems/: blessing.lua
data/scripts/actions/doors/: key_door.lua  level_door.lua  quest_door.lua
data/scripts/creaturescripts/bot/: bot_death.lua
data/scripts/creaturescripts/player/: death.lua  logout.lua
data/scripts/eventcallbacks/player/: on_look.lua
data/scripts/globalevents/: bot_hibernation.lua  bot_house_reclaim.lua  bot_manager.lua  bot_market.lua  bot_market_funding.lua  bot_test_commands.lua  jitter_heartbeat.lua  server_initialization.lua  update_guild_war_status.lua
data/scripts/lib/: BOT_SYSTEM_DOCS.md  BOT_SYSTEM_DOCS_EXTENDED.md  bot_equipment_data.lua  bot_house_claim.lua  bot_hunting_data.lua  bot_market_data.lua  bot_system.lua
data/scripts/talkactions/god/: bot_cavebot.lua  bot_spawn.lua  lagmark.lua
data/scripts/talkactions/player/: bot_house.lua  bot_party.lua  cast.lua
database/bots/: 00_bot_schema.sql  01_accounts.sql  02_players.sql  04_bot_hunt_scripts.sql  05_bot_hunt_waypoints.sql  06_bot_hunt_targets.sql  07_bot_hunt_fields.sql  08_bot_hunt_exclusion_zones.sql  09_bot_city_routes.sql  10_bot_city_route_waypoints.sql  11_bot_market_item_prices.sql  12_bot_equipment.sql  13_bot_town_mapping.sql  14_houses.sql  15_tile_store.sql  README.md  import.sh
deployment/client/: README.md
deployment/web/: login.php
guides/tibia/: Tibia-HOWTO.md  install-tibia.sh  uninstall-tibia.sh
src/config/: config_enums.hpp  configmanager.cpp
src/creatures/: CMakeLists.txt  creature.cpp  creature.hpp
src/creatures/combat/: combat.cpp  spells.cpp
src/creatures/monsters/: monster.hpp
src/creatures/monsters/spawns/: spawn_monster.cpp
src/creatures/npcs/: npcs.hpp
src/creatures/npcs/spawns/: spawn_npc.cpp
src/creatures/players/: player.cpp  player.hpp
src/creatures/players/bot/: bot_engine.cpp  bot_engine.hpp  bot_engine_interface.hpp  bot_engine_loader.cpp  bot_engine_loader.hpp
src/creatures/players/grouping/: party.cpp
src/creatures/players/imbuements/: imbuements.cpp
src/database/: CMakeLists.txt  botdatabasetasks.cpp  botdatabasetasks.hpp  database.cpp  database.hpp
src/game/: CMakeLists.txt  game.cpp  game.hpp  game_bot_market.cpp
src/game/scheduling/: dispatcher.cpp  dispatcher.hpp  save_manager.cpp
src/io/: iomarket.cpp  iomarket.hpp
src/items/: tile.cpp
src/items/decay/: decay.cpp
src/items/weapons/: weapons.cpp
src/lib/logging/: log_with_spd_log.cpp
src/lua/functions/core/game/: game_functions.cpp  game_functions.hpp
src/lua/functions/core/libs/: db_functions.cpp  (+1 more)
src/lua/functions/creatures/: creature_functions.cpp  creature_functions.hpp
src/lua/global/: globalevent.cpp
src/map/: map.cpp
src/server/network/protocol/: protocolgame.cpp  protocolgame.hpp  protocollogin.cpp  protocolstatus.cpp
src/utils/: const.hpp
tools/bot_population_generator/: bot_level_redistribution.sql  bot_population_setup.sql  generate.py
(+2 files in other folders)
